Буры Плюсы Хагверт

--- a/'chg/css/user.css
+++ b/'chg/css/user.css
@@ -310,7 +310,7 @@ p.subtit {position: absolute; top: -38px;}
 #cat227 .desc-good,
 #cat176 .desc-good {max-width:70em;}
 #cat361 .desc-good, #cat362 .desc-good, #cat363 .desc-good, #cat364 .desc-good, #cat379 .desc-good,
-#cat95 .desc-good, #cat175 .desc-good,
+#cat107 .desc-good, #cat95 .desc-good, #cat175 .desc-good,
 #cat270 .desc-good {max-width:80em;}
 
 .ot37#cat175 .desc-good, .ot37#cat176 .desc-good,
