after livetex remove

--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -284,7 +284,7 @@ p.subtit {position: absolute; top: -38px;}
 #cat190 .desc-good, #cat13 .desc-good, #cat19 .desc-good,
 #cat34 .desc-good, #cat35 .desc-good, #cat77 .desc-good, #cat28 .desc-good,
 #cat220 .desc-good, #cat27 .desc-good, #cat197 .desc-good,
-#cat234 .desc-good, #cat138 .desc-good, #cat212 .desc-good,
+#cat234 .desc-good, #cat138 .desc-good, #cat212 .desc-good, #cat92 .desc-good,
 #cat191 .desc-good {min-width:36em;}
 #cat229 .desc-good, #cat20 .desc-good,
 #cat139 .desc-good,
