--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -99,7 +99,7 @@ span.artn {display: none;}
 .good-txt dl {font-size: 80%; line-height: 95%; max-width: 45em; margin: auto; margin-top: .1em; }
 /*.good-txt dt {font-style: italic; float: left; clear: right;}*/
 .good-txt dd {white-space: nowrap;}
-* html .good-txt dt /*IE6*/, *+html /*IE7*/ .good-txt dt {white-space: nowrap;}
+html .good-txt dt {white-space: nowrap;}
 .good-txt dt {font-style: italic; float: left; clear: both;}
 .good-txt dt.sub {clear: both; text-indent: 1em;}
 .good-txt dd {font-weight: bold; float: right; clear: right; margin: 0 6px; overflow: visible;}
@@ -196,9 +196,6 @@ table.one-good.sale1 td#all-summa.good-cart p.price:after { content: " Цена 
 .desc-good .ref .t {
   margin: 15px;
   display: inline-block;
-<!--[if lt IE 8]>
-display:inline;
-<![endif]-->
 }
 .desc-good .ref .t .t2 {
   width: 125px; height: 40px; background-color: #ff0000;
@@ -208,31 +205,33 @@ display:inline;
   width: 125px; height: 40px; background-color: #ff0000;
   margin: 15px;
   display: inline-block;
-<!--[if lt IE 8]>
-display:inline;
-<![endif]-->
 }
-.desc-good .ref .cblock {
+.ref .cblock {
   background-position: right center;
-  width: 225px;
+  width: 215px;
   margin-right: 15px;
 }
-.desc-good .ref .cblock .arrow {padding-right: 0;}
-.desc-good .ref .cblock .txt   {padding-left: 5px; font-size: 12px; line-height: 130%;}
-.desc-good .ref .cblock .txt i {font-size: 14px; line-height: 130%;}
-.desc-good .ref .cblock a      {color: #000000;}
+.ref .cblock .arrow {padding-right: 0;}
+.ref .cblock .txt   {padding-left: 5px; font-size: 12px; line-height: 130%;}
+.ref .cblock .txt i {font-size: 14px; line-height: 130%;}
+.ref .cblock a, .ref .cblock a:hover      {color: #000000;}
 
 #nooferta {text-align: center; font-size: 75%; color: #555; line-height: 100%; padding:4px 23px 1px 23px;}
 
-.toptmp1 { white-space: nowrap; position: absolute; top: 252px; left: 70px; margin-left: 25%;
-  padding-top: 5px; line-height: 24px; color: #00c; font-family: Georgia;}
+#toptmp1 { position: absolute; top: 252px; left: 120px; margin-left: 20%; margin-right: -500px;
+  padding: 5px 0px; font-family: Georgia; }
+#toptmp1 .ref { margin-top: 0; }
 #ny-1 { font-size: 20px; }
 #ny-2 { font-size: 17px; font-style: italic; }
 #ny-3   {color: #000; padding-top: 2px; line-height: 18px;}
 #ny-3 b {color: #f00;}
-/* Hide/adjust this when <div class="toptmp1"> in ssi/top-tmenu.shtml is not used or changed!
-.bgcolor2 {margin-bottom: 100px;}
+#ad1    {color: #e00; font-size: 40px; font-variant: small-caps; font-style: italic; }
+/* Hide/adjust these when <div class="toptmp1"> in ssi/top-tmenu.shtml is not used or changed!
 */
+#toptmp1bgw {position: absolute; top: 252px; width: 100%; }
+#toptmp1bg1 {height: 100px; margin-left: 308px; background-color: #ffccdd;}
+#toptmp1bg  {height: 100px; margin-left: 290px; background-color: #ff0000; opacity: .1}
+.bgcolor2 {margin-bottom: 100px;}
 
 div.ref {text-align: center; font-size: 14px; font-weight: bold; margin: 20px 0px 30px 0}
 div.ref.pdf {font-size: 17px; font-weight: normal; }
@@ -300,8 +299,9 @@ p.subtit {position: absolute; top: -38px;}
 #cat361 .desc-good, #cat362 .desc-good, #cat363 .desc-good, #cat379 .desc-good,
 #cat174 .desc-good, #cat176 .desc-good,
 #cat95 .desc-good {min-width:48em;}
-#cat47 .desc-good,  #cat302 .desc-good, #cat78 .desc-good, #cat422 .desc-good,
+#cat302 .desc-good, #cat78 .desc-good, #cat422 .desc-good,
 #cat48 .desc-good {min-width:52em;}
+#cat47 .desc-good {min-width:56em;}
 /*
 */
 #cat234 .desc-good {max-width:45em;}
@@ -336,5 +336,3 @@ p.subtit {position: absolute; top: -38px;}
   cursor: default;
 }
 */
-
-spew
