--- a/-chg/css/design.css
+++ b/-chg/css/design.css
@@ -5,18 +5,20 @@ img {border: none;}
 table {border-collapse: collapse; border: none;}
 table td {border-collapse: collapse; border: none;}
 .info {padding: 0 50px 50px 10px;}
-.info-cat {padding: 0 0 50px 0px;}
+.info-cat {padding: 10px 0 50px 20px;}
 .top-tab {width: 100%; background-color: #27333A;}
 .top-bg {width: 50%; background: url(/img/top-bg.gif) left top repeat-x;}
 /*.phone {margin: 15px 0 0 40px; padding: 0 5px 0 32px; .phone .adres {font-size: 16px; padding-top: 4px; margin-left: -43px; font-family: Times New Roman, Serif; font-weight: bold;}
 */
-.phone { margin: 6px 0 0 52px; padding: 0 5px 0 32px; background: url(/img/phone.gif) left top no-repeat; color: #fff;}
+.phone {width: 200px; margin: 6px 0 0 30px; padding: 0 5px 0 32px; background: url(/img/phone.gif) left top no-repeat; color: #fff; text-align: right;}
 .phone p {line-height: 120%; padding: 0; margin: 0; color: #fff;}
 .phone .phones {line-height: 120%; font-size: 24px; height: 58px; padding-left: 5px;}
-.phone .adres {font-size: 14px; line-height: 140%; padding-top: 0px; margin-left: -80px; /*font-family: Times New Roman, Serif; font-weight: bold; */ white-space: pre; text-align: center;}
-.phone .adres a {color: #fff; text-decoration: none; font-size: 16px;}
-.phone .adres a:hover {color: #fff; text-decoration: underline;}
-.top-main {background: #60ace5 url(/img/top-main.jpg) right top no-repeat;}
+.address_top {width: 100%; margin: 0; padding: 0 0 17px; color: #fff; vertical-align: middle;}
+.address_top p {line-height: 120%; padding: 0; margin: 0; color: #fff;}
+.address_top .adres {font-size: 14px; line-height: 140%; padding-top: 0px; /*margin-left: -80px;*/ /*font-family: Times New Roman, Serif; font-weight: bold; */ white-space: pre; /*text-align: center;*/}
+.address_top .adres a {color: #fff; text-decoration: none; font-size: 16px;}
+.address_top .adres a:hover {color: #fff; text-decoration: underline;}
+.top-main {/*background: #60ace5 url(/img/top-main.jpg) right top no-repeat;*/vertical-align: middle; padding-bottom: 20px;}
 .feedback {padding: 0 30px 0 20px;}
 .ico {position: absolute; top: 0; left: 410px; padding: 3px 0 0; margin: 0; display: block;}
 .ico img {margin: 0 10px; padding: 0;}
@@ -129,7 +131,8 @@ ol ul li, ol ol li, ul ul li {font: normal 100%/140% Trebuchet MS,Verdana,sans-s
 .copy a {color: #777; text-decoration: none;}
 .copy a:hover {color: #000; text-decoration: underline;}
 .copy1 {float: left; padding: 6px 0px 2px 23px;}
-.copy1 a img {margin: 0 !important;}
+.copy1 a {color: #777; text-decoration: none;}
+.copy1 a:hover {color: #000; text-decoration: underline;}
 /*site map*/
 ul.map {margin: 0; padding: 0;}
 ul.map li {list-style-type: none; list-style-image: none; font-size: 100%; text-align: Left; color: #3247A0; text-indent: 0; margin: 10px 0; padding: 0;}
@@ -152,7 +155,7 @@ textarea {border: 1px solid #D6D5D5; margin: 5px 0;}
 .captcha input.txt {font-size: 100%; margin-bottom: 15px;}
 /*catalog page*/
 .one-good {margin: 15px 20px 0 0; border: 1px solid #E5E5E5;}
-.one-good img {margin: 0px 4px 0px 3px;}
+.one-good img {margin: 0px 0px 0px 3px;}
 .mono {}
 .desc-good .many {margin-bottom: 0 !important;}
 .info-cat .tab {margin: 0;}
@@ -160,7 +163,7 @@ textarea {border: 1px solid #D6D5D5; margin: 5px 0;}
 .more_goods .one-good {width: 100%;}
 .info-cat .price-nds {padding-top: 15px; clear: left; }
 .desc-good .price-nds {padding: 0;}
-.good-txt {padding: 12px 2px 10px 1px;}
+.good-txt {padding: 12px 2px 10px 0.8%;}
 .good-txt p {padding: 7px 0 0; color: #27333A; line-height: 120%;}
 .good-txt a {color: #206cb7; text-decoration: none;}
 .good-txt a:hover {color: #206cb7; text-decoration: underline;}
@@ -186,7 +189,7 @@ textarea {border: 1px solid #D6D5D5; margin: 5px 0;}
 .desc-good .tab {width: 100% !important;}
 .desc-good h1 {padding-bottom: 10px;}
 .desc-good .tab {margin-top: 0; margin-bottom: 25px;}
-.more_goods {padding: 5px 0px 0px 11px; border-left: 0px solid #D0D2D4;}
+.more_goods {width: 292px; padding: 5px 0px 0px 11px; border-left: 0px solid #D0D2D4;}
 .more_goods .one-good {margin: 11px 0 0 0;}
 .more_goods h2+.one-good {margin-top: 8px;}
 img.mini {margin: 10px 0;}
@@ -236,11 +239,8 @@ Q	 {		quotes: '\AB' '\BB' '"' '"' "'" "'" ; 	}
 .results .info {padding: 0 0 10px 10px; color: #848484;}
 .pages {font-size: 87.5%;}
 .footerYS {font-size: 80%; color: #848484; text-align: right;}
-.site_search {padding: 0 0 0 20px; width: 50%;}
-.site_search .txt {width: 140px; height: 21px; margin: 0;}
-.site_search1 {position: absolute; right: 0; top: 195px;}
-@media screen and (max-width: 1000px) { .site_search1 {position: absolute; left: 400px !important; right: auto !important; top: 195px;}
-}
+.site_search {padding: 0 0 0 10px; width: 100%;}
+.site_search .txt {width: 200px; height: 21px; margin: 0;}
 @font-face {
   font-family: 'PT Rouble Sans';
   font-style: normal;
