--- a/-chg/css/design.css
+++ b/-chg/css/design.css
@@ -69,7 +69,7 @@ table td {border-collapse: collapse; border: none;}
 .lmenu li ul li.open > a {font-weight: bold; color: #faeac8;}
 /*3*/
 .lmenu li ul li ul {margin: 0; padding: 0 0 0 10px;}
-.lmenu li ul li ul li { font-size: 12; line-height: 120%;}
+.lmenu li ul li ul li {font-size: 12px; line-height: 120%;}
 .lmenu li ul li ul li a, .lmenu li ul li ul li.open span {width: 218px; background: none;}
 
 .spo {padding-right: 29px;}
@@ -226,7 +226,6 @@ p.delete img {margin: 0 !important;}
 .sender a {color: #fff; text-decoration: none; display: block; padding: 0 10px;}
 .sender a:hover {color: #A2C6D1;}
 #msg_txt {display: none; color: #fff; position: absolute; top: 0; left: 0; width: 100%; text-align: center;}
-Q	 {		quotes: '\AB' '\BB' '"' '"' "'" "'" ; 	}
 /*search*/
 .find-tab {margin: 0; padding: 0; border: none;}
 .find-tab td {margin: 0; padding: 0 10px 0 0; border: none; vertical-align: baseline;}
