--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -190,6 +190,9 @@ table.one-good.sale1 td#all-summa.good-cart p.price span {font-size: 18px /*150%
 table.one-good.sale1 td#all-summa.good-cart p.price {white-space: normal; padding-left: 0; padding-right: 0; width: 112px; }
 table.one-good.sale1 td#all-summa.good-cart p.price:after { content: " Цена распродажи "; font-size: 11px; display: block; text-align: center; color: #C90000; }
 
+table.tab tr.nocart {background-color: #fff8e0; }
+table.tab tr.nocart td.good-cart a { display: none; }
+
 .l1 {clear: both; color: #555; text-align: center; font-size: 24px; font-weight: bold; font-family: Times New Roman, serif; font-style: italic; margin: 6px 0px -12px 0;}
 .l1a {font-weight: normal;}
 .main-info .l2 {color: #666; text-align: center; font-size: 16px; margin: 6px 0px -12px 0}
