--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -182,7 +182,7 @@ table.tab tr.ltdl td.tb:before { content: ""; }
 table.tab.later0909:after, table.one-good.mono.later0909:after {
   content: "Поставка ожидается в апреле 2016 г."; }
 table.tab.later1103:after, table.one-good.mono.later1103:after {
-  content: "Поставка ожидается 11 марта 2016 г."; }
+  content: "Поставка ожидается в конце марта 2016 г."; }
 
 table.one-good.sale1, table.tab.sale1 {background-color: #fff8f8;}
 table.tab tr.sale1 {background-color: #ffece8;}
@@ -324,8 +324,9 @@ p.subtit {position: absolute; top: -38px;}
 #cat361 .desc-good, #cat362 .desc-good, #cat363 .desc-good, #cat379 .desc-good,
 #cat174 .desc-good, #cat176 .desc-good,
 #cat95 .desc-good {min-width:48em;}
-#cat302 .desc-good, #cat78 .desc-good, #cat422 .desc-good,
+#cat302 .desc-good, #cat78 .desc-good,
 #cat48 .desc-good {min-width:52em;}
+#cat422 .desc-good,
 #cat47 .desc-good {min-width:56em;}
 /*
 */
