--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -21,6 +21,8 @@ p.spo1:hover, p.spo2:hover{background-color:#000;}
 .c {text-align: center;}
 .i {font-style: italic;}
 
+.phone .phones {line-height: 180%;}
+.call {line-height: 200%;}
 .tab .rub {font-weight: normal;}
 .info-cat { padding-top: 0; }
 
@@ -169,6 +171,7 @@ table.one-good.many.ltd, table.one-good.mono.ltd td.good-txt,
   table.tab.ltd tr, table.tab.ltdi tr.ltdl {background-color: #faf6e4 /*#f2f2fc*/;}
 table.tab.ltd:after, table.one-good.mono.ltd:after, table.tab.ltdi:after,
 table.tab.later0909:after, table.one-good.mono.later0909:after,
+table.tab.later1204:after, table.one-good.mono.later1204:after,
 table.tab.later1103:after, table.one-good.mono.later1103:after {
   font-weight: bold; font-size: 80%; line-height: 160%; border: none;
   width: 1px; white-space: nowrap; display: table-caption; caption-side: bottom;}
@@ -183,6 +186,8 @@ table.tab.later0909:after, table.one-good.mono.later0909:after {
   content: "Поставка ожидается в апреле 2016 г."; }
 table.tab.later1103:after, table.one-good.mono.later1103:after {
   content: "Поставка ожидается в конце марта 2016 г."; }
+table.tab.later1204:after, table.one-good.mono.later1204:after {
+  content: "Поставка ожидается 12 апреля 2016 г."; }
 
 table.one-good.sale1, table.tab.sale1 {background-color: #fff8f8;}
 table.tab tr.sale1 {background-color: #ffece8;}
