--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -188,7 +188,7 @@ table.tab.later0909:after, table.one-good.mono.later0909:after {
 table.tab.later1204:after, table.one-good.mono.later1204:after {
   content: "Поставка ожидается 12 апреля 2016 г."; }
 table.tab.later2204:after, table.one-good.mono.later2204:after {
-  content: "Поставка ожидается 22 апреля 2016 г."; }
+  content: "Поставка ожидается 20 мая 2016 г."; }
 
 table.one-good.sale1, table.tab.sale1 {background-color: #fff8f8;}
 table.tab tr.sale1 {background-color: #ffece8;}
