--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -69,6 +69,7 @@ span.artn {display: none;}
 td.choose {text-align: center;}
 body.ot37 td.choose {display: none;}
 .nocart   td.choose a {display: none;}
+.tab .thin td {color: #666; padding-top: 3px; line-height: 100%;}
 
 .tab tr.bold {font-weight: bold;}
 .tab tr.red  {background-color: #ffe4e0;}
@@ -192,7 +193,7 @@ table.tab.later0909:after, table.one-good.mono.later0909:after {
 table.tab.later1204:after, table.one-good.mono.later1204:after {
   content: "Поставка ожидается 12 апреля 2016 г."; }
 table.tab.later2204:after, table.one-good.mono.later2204:after {
-  content: "Поставка ожидается 20 мая 2016 г."; }
+  content: "Поставка ожидается в конце мая 2016 г."; }
 
 table.one-good.sale1, table.tab.sale1 {background-color: #fff8f8;}
 table.tab tr.sale1 {background-color: #ffece8;}
