--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -342,7 +342,7 @@ p.subtit {position: absolute; top: -38px;}
 #cat361 .desc-good, #cat362 .desc-good, #cat363 .desc-good, #cat379 .desc-good,
 #cat174 .desc-good, #cat176 .desc-good,
 #cat95 .desc-good {min-width:48em;}
-#cat302 .desc-good, #cat78 .desc-good,
+#cat302 .desc-good, #cat414 .desc-good, #cat78 .desc-good,
 #cat48 .desc-good {min-width:52em;}
 #cat422 .desc-good,
 #cat47 .desc-good {min-width:56em;}
