--- a/-chg/css/design.css
+++ b/-chg/css/design.css
@@ -5,20 +5,11 @@ img {border: none;}
 table {border-collapse: collapse; border: none;}
 table td {border-collapse: collapse; border: none;}
 .info {padding: 0 50px 50px 10px;}
-.info-cat {padding: 10px 0 50px 20px;}
+/*.info-cat {padding: 10px 0 50px 20px;} Moved to user.css */
 .top-tab {width: 100%; background-color: #27333A;}
 .top-bg {width: 50%; background: url(/img/top-bg.gif) left top repeat-x;}
 /*.phone {margin: 15px 0 0 40px; padding: 0 5px 0 32px; .phone .adres {font-size: 16px; padding-top: 4px; margin-left: -43px; font-family: Times New Roman, Serif; font-weight: bold;}
 */
-.phone {width: 200px; margin: 6px 0 0 30px; padding: 0 5px 0 32px; background: url(/img/phone.gif) left top no-repeat; color: #fff; text-align: right;}
-.phone p {line-height: 120%; padding: 0; margin: 0; color: #fff;}
-.phone .phones {line-height: 120%; font-size: 24px; height: 58px; padding-left: 5px;}
-.address_top {width: 100%; margin: 0; padding: 0 0 17px; color: #fff; vertical-align: middle;}
-.address_top p {line-height: 120%; padding: 0; margin: 0; color: #fff;}
-.address_top .adres {font-size: 14px; line-height: 140%; padding-top: 0px; /*margin-left: -80px;*/ /*font-family: Times New Roman, Serif; font-weight: bold; */ white-space: pre; /*text-align: center;*/}
-.address_top .adres a {color: #fff; text-decoration: none; font-size: 16px;}
-.address_top .adres a:hover {color: #fff; text-decoration: underline;}
-.top-main {/*background: #60ace5 url(/img/top-main.jpg) right top no-repeat;*/vertical-align: middle; padding-bottom: 20px;}
 .feedback {padding: 0 30px 0 20px;}
 .ico {position: absolute; top: 0; left: 410px; padding: 3px 0 0; margin: 0; display: block;}
 .ico img {margin: 0 10px; padding: 0;}
@@ -55,23 +46,7 @@ table td {border-collapse: collapse; border: none;}
 .bgcolor1 {background-color: #171E22;}
 .bgcolor3 {background-color: #27333A;}
 .white {background-color: #fff;}
-/*left menu*/
-.lmenu {margin: 5px 0 12px; padding: 0;}
-.lmenu li {margin: 1px 0; padding: 0; font-size: 14px; line-height: 150%; text-align: left; list-style: none;}
-.lmenu li:hover, .lmenu li.open {background: url(/img/lmenu_bg.gif) right top repeat-y;}
-.lmenu li a, .lmenu li.open span {display: inline-block; width: 243px; padding: 3px 10px 3px 27px; background: url(/img/bull_left.gif) 8px center no-repeat; color: #fff; text-decoration: none;}
-.lmenu li.open span {color: #828e95;}
-.lmenu li.open > a {font-weight: bold; color: #faeac8;}
-/*2*/
-.lmenu li ul {margin: 0; padding: 0 0 0 15px;}
-.lmenu li ul li {margin: 1px 0; font-size: 13px; line-height: 125%;}
-.lmenu li ul li a, .lmenu li ul li.open span {width: 228px; background: url(/img/bull.gif) 9px center no-repeat;}
-.lmenu li ul li a:hover {text-decoration: underline;}
-.lmenu li ul li.open > a {font-weight: bold; color: #faeac8;}
-/*3*/
-.lmenu li ul li ul {margin: 0; padding: 0 0 0 10px;}
-.lmenu li ul li ul li {font-size: 12px; line-height: 120%;}
-.lmenu li ul li ul li a, .lmenu li ul li ul li.open span {width: 218px; background: none;}
+/**** left menu Moved to user.css ****/
 
 .spo {padding-right: 29px;}
 .spo-head {background: url(/img/spo_bg.gif) left top repeat-x; height: 55px; margin-bottom: 7px;}
@@ -87,7 +62,7 @@ table td {border-collapse: collapse; border: none;}
 .all_spo a {color: #fff; text-decoration: none;}
 .all_spo a:hover {color: #f8ddaa;}
 .center-block {background-color: #fff; width: 100%;}
-.cblock {width: 282px; margin: 10px 30px 10px 0; display: block; float: left; background: url(/img/bg_block.gif) left no-repeat;}
+.cblock {width: 282px; margin: 10px 30px 0px 0; display: block; float: left; background: url(/img/bg_block.gif) left top no-repeat;}
 .cblock .txt {font-size: 13px; /*padding: 5px 10px 5px 15px; */
 padding: 0px 0px 0px 15px; line-height: 120%; width: 100%;}
 .cblock a {color: #206cb7; text-decoration: none;}
@@ -183,9 +158,7 @@ textarea {border: 1px solid #D6D5D5; margin: 5px 0;}
 .list1 {padding: 20px 0 0;}
 .list2 {padding: 20px 0 0;}
 .list1 p, .list2 p {padding: 0;}
-/*-*/
-.desc-good {/*width: 70%; */
- padding: 5px 0px 25px 0;}
+/* .desc-good {width: 70%; padding: 5px 0px 25px 0;} Moved to user.css */
 .desc-good .one-good {margin: 0px 0 15px 0; width: 100%;}
 .desc-good .tab {width: 100% !important;}
 .desc-good h1 {padding-bottom: 10px;}
