--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -116,7 +116,7 @@ span.artn {display: none;}
 .tab tr.norow {display: none;}
 
 td.choose {text-align: center;}
-body.ot37 td.choose {display: none;}
+/*body.ot37 td.choose {display: none;}*/
 body.ot36 td.choose {width: 20px; padding: 2px; }
 body.ot36 td.choose a {font-size: 0; width: 16px; height: 16px; background-image: url("/img/design/cart16.png")}
 .nocart td.choose a, .subhead  td.choose a {display: none;}
