--- a/-chg/css/user.css
+++ b/-chg/css/user.css
@@ -26,25 +26,25 @@ div.phone {width: 264px; height: 43px; margin: 0px 0 0 40px; padding: 8px 0px 0 
 .ny2017a4 b {color: #ffffff;}
 .ny2017w  {margin: -12px 0 0 15px; line-height: 14px; font-size: 13px; color: #ffffff;}
 */
-div.phone {margin-top: 2px;}
-.top-tab .address_top .adres {margin-top: 8px;}
-.ny2017a  {padding-left: 84px; white-space: nowrap; font-family: Georgia serif; font-style: italic;}
-.ny2017a1 {font-size: 24px; font-weight: bold; color: #00f8ff; line-height: 28px;}
+.ny2017a  {padding-left: 42px; text-align: center; font-family: Georgia serif; font-style: italic;}
 .ny2017a1 {font-size: 24px; font-weight: bold; color: #dddddd; line-height: 28px;}
 .ny2017a2 {border: none; margin: 0px 3px 0px 0px;}
-.ny2017a3 {font-size: 30px; font-weight: bold; color: #00f8ff; line-height: 20px;}
 .ny2017a3 {font-size: 30px; font-weight: bold; color: #ffffff; line-height: 20px;}
+.ny2017b  {padding: 0px 0px 6px 42px; text-align: center; font-weight: bold; color: #00f8ff; font-size: 16px; line-height: 7px;}
 
 /**** Main & patches to DESIGN.CSS ****/
 /* top */
 /* .top-tab>tbody>tr>td>a>img {margin: 0px 0px 5px 23px !important;} */
-.phone {width: 240px; height: 43px; margin: 14px 0 0 40px; padding: 8px 0px 0 32px; background: url(/img/phone.gif) left top no-repeat; }
+.phone {width: 240px; height: 43px; margin: -2px 0 0 40px; padding: 6px 0px 0 32px; background: url(/img/phone.gif) left top no-repeat; }
 .phone .phones {color: #fff; font-size: 28px; margin: 0; padding: 0 0px 0 5px;}
 .address_top {width: 100%;}
-.address_top .adres {font-size: 15px; line-height: 140%; padding: 0; margin: 20px 0 0 0; color: #fff; white-space: pre;}
+.address_top .adres {font-size: 15px; line-height: 140%; padding: 0; margin: 0; color: #fff; white-space: pre;}
 .address_top .adres a {color: #fff; text-decoration: none; font-size: 18px;}
 .address_top .adres a:hover {color: #fff; text-decoration: underline;}
-.top-cert {vertical-align: middle; padding: 0px 12px 0px 30px;}
+.top-cert {vertical-align: middle; padding: 0px 6px 0px 24px;}
+p.crumbs {line-height: 125%; padding: 2px 0 6px; margin: 0; }
+p.crumbs, p.crumbs a, p.crumbs a:hover {color: #808080; }
+h1 {line-height: 125%;}
 /* left menu */
 .lmenu {margin: 2px 0 12px; padding: 0;}
 .lmenu li {margin: 1px 0; padding: 0; font-size: 14px; line-height: 12px; text-align: left; list-style: none;}
@@ -69,8 +69,9 @@ td.white>div.about { padding-left: 12px;}
 .tmenu {padding: 0 11px;}
 .tmenu a {color: #eee;}
 .tmenu:nth-child(7) a {color: #fff;}
-.site_search {padding-left: 5px}
-.feedback {padding: 0 10px 0 8px;}
+.site_search {padding: 0 0 0 5px; width: 100%;}
+.site_search .txt {width: 300px; height: 21px; margin: 0;}
+.feedback {padding: 0 5px 0 8px;}
 .desc-good {padding: 5px 0px 0px 0;}
 .more_goods {width: 272px;}
 
@@ -271,6 +272,9 @@ content: "Поставка ожидается 26 февраля 2017 г."; }
 /* content: "Поставка ожидается во второй половине февраля 2017 г."; } */
 table.tab.next:after    { content: ""; }
 
+p.callprice { font-weight: bold; padding: 0px; }
+p.callprice:after { content: "Цена по запросу"; }
+
 .cblock .desc.txt {color: #ee0000; font-size: 12px; padding: 2px 0 0 1px; white-space: nowrap; overflow: visible;}
 #cat424 .cblock {margin-bottom: 10px}
 
@@ -412,7 +416,7 @@ body.ot37 .info-cat>table {position: relative;}
 p.subtit {position: absolute; top: -38px;}
 .price-none {font-weight: bold;}
 
-.desc-good {min-width: 40em;}
+.desc-good {min-width: 39.5em;}
 /*
 #cat266 .desc-good,
 #cat32 .desc-good {min-width:28em;}
